--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/anthonymarkreynolds/muscle-therapy-massage-backend/issues"
   },
-  "homepage": "https://github.com/anthonymarkreynolds/muscle-therapy-massage-backend#readme"
+  "homepage": "https://github.com/anthonymarkreynolds/muscle-therapy-massage-backend#readme",
+  "devDependencies": {
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
