--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "postcss": "^8.4.19",
+    "postcss-cli": "^10.0.0",
+    "tailwindcss": "^3.2.4"
   }
 }
